--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,47 @@ __pycache__/
 *.pyc
 .env
 .DS_Store
+
+
+# dependencies
+node_modules/
+
+# production build
+build/
+dist/
+
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE / editor
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# cache
+.cache/
+.eslintcache
+
+# testing
+coverage/
+
+# Vite (if using)
+vite.svg
+
+# TypeScript
+*.tsbuildinfo
